about 1/2 of jingug

--- a/localization/english/missions/chu_missions_l_english.yml
+++ b/localization/english/missions/chu_missions_l_english.yml
@@ -8,7 +8,7 @@
 #Missions
 
 01_chu_missions_task_1: "A Quarrel Turned Deadly"
-01_chu_missions_task_1_DESC: "There is a celebration that #E Heng Mi#! would like to attend, and [ROOT.GetCountry.GetRuler.GetName] has generously granted[SCOPE.sCharacter('next_king').GetFirstName] permission. All of the noble families are sending their best, so it is only natural that our heir will attend. \n\n\n\n\n\n\n\n\n\n@india_por1!"
+01_chu_missions_task_1_DESC: "There is a celebration that #E Heng Mi#! would like to attend, and [ROOT.GetCountry.GetRuler.GetName] has generously granted [SCOPE.sCharacter('next_king').GetFirstName] permission. All of the noble families are sending their best, so it is only natural that our heir will attend. \n\n\n\n\n\n\n\n\n\n@india_por1!"
 
 01_chu_missions_task_2: "War Refugees"
 01_chu_missions_task_2_DESC: "The wars we are entangled in have devastated the countryside, sending an ever-growing stream of refugees to [ROOT.GetCountry.GetCapital.GetName]. Thankfully, we have the ability to take care of our people during these dark times. \n\n\n\n\n\n\n\n\n\n@india_mil14!"
@@ -129,7 +129,7 @@ me_chu.1000.a: "Declare the War!"
 me_chu.1000.b: "Now is not the time..."
 
 me_chu_1_title: "$01_chu_missions_task_1$"
-me_chu_1_desc: "A gathering of noble families in the mountains near [GetProvince('(int32)8828').GetArea.GetName] has had disastrous consequences![SCOPE.sCharacter('next_king').GetName] and [SCOPE.sCharacter('next_king').GetHerHis] retinue were insulted by [SCOPE.sCharacter('poor_kui_ying').GetName]'s retainers, one thing led to another, and [SCOPE.sCharacter('poor_kui_ying').GetFirstName] was stabbed to death by [SCOPE.sCharacter('next_king').GetFirstName].\n\nNeedless to say, the #E Qin#! are furious that such an important family member of theirs was murdered, and now they have launched an invasion of [GetProvince('(int32)5573').GetName] in revenge!\n\nWhat is worse is that their dogs #E Han#! and #E Wei#! have answered the call to war - a three-front war that has caught us unawares!"
+me_chu_1_desc: "A gathering of noble families in the mountains near [GetProvince('(int32)8828').GetArea.GetName] has had disastrous consequences! [GetCharacter('(int32)486').GetName] and [SCOPE.sCharacter('next_king').GetHerHis] retinue were insulted by [GetCharacter('(int32)474').GetName]'s retainers, one thing led to another, and [GetCharacter('(int32)474').GetFirstName] was stabbed to death by [GetCharacter('(int32)486').GetFirstName].\n\nNeedless to say, the #E Qin#! are furious that such an important family member of theirs was murdered, and now they have launched an invasion of [GetProvince('(int32)5573').GetName] in revenge!\n\nWhat is worse is that their dogs #E Han#! and #E Wei#! have answered the call to war - a three-front war that has caught us unawares!"
 me_chu_1.a: "Our enemies will regret this decision!"
 me_chu_1_tooltip: "The mission task '#Y $01_chu_missions_task_1$#!' has now been #G Completed#!!"
 
