--- a/localization/english/missions/missions_jingug_l_english.yml
+++ b/localization/english/missions/missions_jingug_l_english.yml
@@ -1,89 +1,89 @@
 ﻿l_english:
 
- missions_jingug:0 "Jingug"
- missions_jingug_DESCRIPTION:0 "Mission description"
- missions_jingug_CRITERIA_DESCRIPTION:0 "This mission will be completed when"
+ missions_jingug: "Jingug"
+ missions_jingug_DESCRIPTION: "Mission description"
+ missions_jingug_CRITERIA_DESCRIPTION: "This mission will be completed when"
  missions_jingug_BUTTON_TOOLTIP: ""
 
  #Missions
 
  missions_jingug_task_1: "Northern Conference"
- missions_jingug_task_1_DESC: ""
+ missions_jingug_task_1_DESC: "It has been decided within [ROOT.GetCountry.GetCapital.GetName] that our northern tributaries must be drawn closer together with the people of [ROOT.GetCountry.GetName]. We must organize a conference where we inform our client states about their new responsibilities and the expectations that we have.\n\n\n\n\n\n\n\n\n\n@east_steppemil2!"
 
  missions_jingug_task_2: "Setting Sail"
- missions_jingug_task_2_DESC: ""
+ missions_jingug_task_2_DESC: "For a long time, [GetCountry('DMN').GetName] has resisted the inevitable, but the time has come to put an end to their delusions of independence from the mainland. [ROOT.GetCountry.GetRuler.GetName] has ordered that a navy be constructed with the express purpose of bringing the islanders to heel.\n\n\n\n\n\n\n\n\n\n@india_mil1!"
 
  missions_jingug_task_3: "Bronzecraft"
- missions_jingug_task_3_DESC: ""
+ missions_jingug_task_3_DESC: "Our armorers and weaponsmiths have become well-acquainted with working with bronze, which can be found in various regions of [ROOT.GetCountry.GetName], but there is more that we could do to increase production. Building a #T Blacksmith#! workshop directly in a province that has base metals @base_metals! would facilitate these efforts. \n\n\n\n\n\n\n\n\n\n@india_mil6!"
 
  missions_jingug_task_4: "Conquest of Joseon"
- missions_jingug_task_4_DESC: ""
+ missions_jingug_task_4_DESC: "\n\n\n\n\n\n\n\n\n\n@china_mil1!"
 
  missions_jingug_task_5: "Convert the Kodo"
- missions_jingug_task_5_DESC: ""
+ missions_jingug_task_5_DESC: "\n\n\n\n\n\n\n\n\n\n@tibet_mil11!"
 
  missions_jingug_task_6: "Island Tamna"
- missions_jingug_task_6_DESC: ""
+ missions_jingug_task_6_DESC: "\n\n\n\n\n\n\n\n\n\n@greek_mil4!"
 
  missions_jingug_task_7: "Ritual Bronze Daggers"
- missions_jingug_task_7_DESC: ""
+ missions_jingug_task_7_DESC: "\n\n\n\n\n\n\n\n\n\n@tibet_mil3!"
 
  missions_jingug_task_8: "Northern Jin"
- missions_jingug_task_8_DESC: ""
+ missions_jingug_task_8_DESC: "\n\n\n\n\n\n\n\n\n\n@east_steppemil1!"
 
  missions_jingug_task_9: "Tribal Center of Jinhan"
- missions_jingug_task_9_DESC: ""
+ missions_jingug_task_9_DESC: "\n\n\n\n\n\n\n\n\n\n@east_steppemil3!"
 
  missions_jingug_task_10: "Claim the Islands"
- missions_jingug_task_10_DESC: ""
+ missions_jingug_task_10_DESC: "\n\n\n\n\n\n\n\n\n\n@tibet_mil6!"
 
  missions_jingug_task_11: "Northern Wall"
- missions_jingug_task_11_DESC: ""
+ missions_jingug_task_11_DESC: "\n\n\n\n\n\n\n\n\n\n@china_mil14!"
 
  missions_jingug_task_12: "Capitals of Jingug"
- missions_jingug_task_12_DESC: ""
+ missions_jingug_task_12_DESC: "\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  missions_jingug_task_13: "Dominate the Eastern Coast"
  missions_jingug_task_13_DESC: ""
 
  missions_jingug_task_14: "Across the Sea"
- missions_jingug_task_14_DESC: ""
+ missions_jingug_task_14_DESC: "\n\n\n\n\n\n\n\n\n\n@greek_mil11!"
 
  missions_jingug_task_15: "Big in Japan"
- missions_jingug_task_15_DESC: "Things will happen while they can,\nI will wait here for my man tonight,\nIt's easy when you're big in Japan."
+ missions_jingug_task_15_DESC: "\n\n\n\n\n\n\n\n\n\n@china_mil9!"
  
  missions_jingug_task_16: "United Kingdom"
- missions_jingug_task_16_DESC: ""
+ missions_jingug_task_16_DESC: "\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
 
  #Events 
  me_jingug_1_title: "$missions_jingug_task_1$"
- me_jingug_1_desc: ""
- me_jingug_1.a: ""
+ me_jingug_1_desc: "On a sunny day without a cloud in the sky, a curious gathering assembled within the citadel of [ROOT.GetCountry.GetCapital.GetName], and from the first moment the barbarian Chieftains from the north passed through the fortress gates, the peasants stopped their work and watched the proud retinues, dressed in full tribal regalia, pass by on their horses. It was truly a sight to behold, and one that would not be seen by the locals for a long time.\n\nThe occasion was a momentous one for the region; [ROOT.GetCountry.GetRuler.GetName] has decided that our northern tributaries must become full #E feudatories#! - our relationship with our friends has been a pleasant one, and it would increase security and prosperity for all involved if they acquiesced to our demands. Thankfully for them, they have all agreed to what [ROOT.GetCountry.GetRuler.GetFirstName] has suggested.\n\nThe only one displeased by this development is [GetCountry('JSN').GetRuler.GetName] of [GetCountry('JSN').GetName], who has foolishly entertained his own designs for the region and is frustrated by the deft political maneuvering of our [ROOT.GetCountry.GetRulerTitle]."
+ me_jingug_1.a: "This day shall be celebrated forevermore by our sons and daughters"
  
  me_jingug_100_title: "$missions_jingug_task_1$"
  me_jingug_100_desc: ""
  me_jingug_100.a: ""
 
  me_jingug_2_title: "$missions_jingug_task_2$"
- me_jingug_2_desc: ""
- me_jingug_2.a: ""
+ me_jingug_2_desc: "[ROOT.GetCountry.GetRuler.GetName], we have finally built a fleet worthy of the [ROOT.GetCountry.GetAdjective], just as you have ordered, but that is not all - we have simultaneously sent an embassy to [GetCountry('DMN').GetName] informing them that we have claimed their island for ourselves."
+ me_jingug_2.a: "Our sailors and soldiers are ready for whatever may come"
 
  me_jingug_3_title: "$missions_jingug_task_3$"
- me_jingug_3_desc: ""
- me_jingug_3.a: ""
+ me_jingug_3_desc: "We are pleased to report that the #E Blacksmith#! building that we have recently constructed has quickly become a valuable resource for teaching others about the craft of working with base metals @base_metals!.\n\nOnce an aspiring blacksmith has spent a few weeks studying with the great masters out in the wilderness, they return to their local villages and settlements and share what they have learned with their kinsmen. Now, a great deal of our tribesmen are skilled metalworkers and are able to craft their own weapons and armor - a boon to the levies of [ROOT.GetCountry.GetName]."
+ me_jingug_3.a: "This is a most auspicious beginning, indeed"
 
  me_jingug_4_title: "$missions_jingug_task_4$"
- me_jingug_4_desc: ""
- me_jingug_4.a: ""
+ me_jingug_4_desc: "Truth be told, there were some voices within [ROOT.GetCountry.GetCapital.GetName] that feared a potential conflict with [GetCountry('JSN').GetName], for they controlled a vast territory and were no strangers to warfare. Their horse archers are especially deadly, with many mercenaries from the steppes riding alongside their levies - certainly no easy target.\n\nBut [ROOT.GetCountry.GetRuler.GetName] was not convinced of the threat and boldly announced that we would be invading the homelands of our enemies, promising that victory would be ours and that greater glories would be found after we demolished the [GetCountry('JSN').GetRuler.GetFamilyDisplayAdjective] Dynasty.\n\nTo the surprise of no one, everything that our [ROOT.GetCountry.GetRulerTitle] vowed would come to pass."
+ me_jingug_4.a: "In one fell stroke, we have secured vast swathes of territory"
 
  me_jingug_5_title: "$missions_jingug_task_5$"
  me_jingug_5_desc: ""
  me_jingug_5.a: ""
 
  me_jingug_6_title: "$missions_jingug_task_6$"
- me_jingug_6_desc: ""
- me_jingug_6.a: ""
+ me_jingug_6_desc: "Now that we have conquered the island of [GetCountry('DMN').GetName], it has been suggested to [ROOT.GetCountry.GetRuler.GetName] that we press eastward, for there are valuable islands that are relatively undefended - the barbarian tribal hordes will pose no threat to our disciplined armies.\n\nIt appears that we shall be using the island of Tamna as a staging point for further invasions."
+ me_jingug_6.a: "One by one, the islands shall fall to our forces!"
 
  me_jingug_7_title: "$missions_jingug_task_7$"
  me_jingug_7_desc: ""
@@ -98,8 +98,8 @@
  me_jingug_9.a: ""
 
  me_jingug_10_title: "$missions_jingug_task_10$"
- me_jingug_10_desc: ""
- me_jingug_10.a: ""
+ me_jingug_10_desc: "Our spies on the islands have been talking to local collaborators, who have informed our men that the island of #E Wa#! is in a terribly disorganized state, ruled by many squabbling lords and kings that are ripe for conquering ourselves. Once [ROOT.GetCountry.GetRuler.GetName] heard this news, [ROOT.GetCountry.GetRuler.GetSheHe] immediately ordered that our forces prepare for further invasions."
+ me_jingug_10.a: "We must take advantage of their fractured state"
 
  me_jingug_11_title: "$missions_jingug_task_11$"
  me_jingug_11_desc: ""
@@ -130,10 +130,10 @@
  #Tooltips
  missions_jingug_task_3_blacksmith_on_bronze: "We have at least one province with the base metals trade good and the blacksmith building."
  missions_jingug_task_7_any_artist: "We have at least one province with an artist special pop."
- missions_jingug_task_1_claims: "TODO CLAIMS"
- missions_jingug_task_4_claims: "TODO CLAIMS"
- missions_jingug_task_10_claims: "TODO CLAIMS"
- missions_jingug_task_14_claims: "TODO CLAIMS"
+ missions_jingug_task_1_claims: "We will receive claims on the #Y Lelang#! and #Y Liaodong#! areas."
+ missions_jingug_task_4_claims: "We will receive claims on the #Y Lintun#! and #Y Xuantu#! areas."
+ missions_jingug_task_10_claims: "We will receive claims on the #Y Matsura#!, #E Kii#! and #Y Kumaso#! areas."
+ missions_jingug_task_14_claims: "We will receive claims on every province in the #Y Wa#! region."
  is_in_region_wa: "Is in the Region of Wa."
  missions_jingug_task_15_every_wa_province_gets: "Every owned province in the Region of Wa will get:"
  missions_jingug_task_12_choose_new_capital: "We will be able to choose our new capital."
@@ -141,17 +141,17 @@
  
  #Treasure
  ritual_bronze_daggers_jingug: "Ritual Bronze Daggers" #Sehyungdonggeom - slender bronze daggers
- ritual_bronze_daggers_jingug_desc: "TODO"
+ ritual_bronze_daggers_jingug_desc: "Forged by the master craftsmen of Jingug, the Sehyungdonggeom, or ornate ritual bronze daggers, reflects the skill of the blacksmiths and metalworkers living in their kingdom."
 
  #Modifiers
- jingug_sails: "TODO"
- jingug_bronze: "TODO"
+ jingug_sails: "Jingug Naval Initiative"
+ jingug_bronze: "Bronze Weaponry"
  jingug_capital: "TODO"
  domineering_jingug: "TODO"
  big_in_japan_jingug: "TODO"
  united_jingug: "TODO"
- desc_jingug_sails: "TODO"
- desc_jingug_bronze: "TODO"
+ desc_jingug_sails: "We must not only dominate on land, but by sea as well - send out the call for manpower! We must conquer the oceans!"
+ desc_jingug_bronze: "Our blacksmiths are exceptionally skilled when it comes to working with bronze, which has been of great use to our armies."
  desc_jingug_capital: "TODO"
  desc_domineering_jingug: "TODO"
  desc_big_in_japan_jingug: "TODO"
