Mission Formable for Xiongnu

--- a/localization/english/missions/xiongnu_missions_3_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_3_l_english.yml
@@ -244,6 +244,7 @@
  me_xiongnu_3_23_title:0 "$xiongnu_missions_3_task_23$"
  me_xiongnu_3_23_desc:0 ""
  me_xiongnu_3_23.a:0 ""
+ me_xiongnu_3_23.b:0 ""
 
  me_xiongnu_3_24_title:0 "$xiongnu_missions_3_task_24$"
  me_xiongnu_3_24_desc:0 ""
@@ -317,3 +318,6 @@
  desc_xiongnu_hun_storm: ""
  desc_xiongnu_wu: ""
  desc_upset_xiongnu_chars: ""
+ 
+ #Formable
+ XIONGNU_EMPIRE: "Xiongnu Empire"
