--- a/localization/english/ti_cultures_l_english.yml
+++ b/localization/english/ti_cultures_l_english.yml
@@ -25,6 +25,7 @@
  bactra:0 "Bactrian"
  elam:0 "Elamite"
  tai:0 "Tai"
+ south_picena:0 "Picenian"
  #New Arabian
  kindite:0 "Kindite"
  samad:0 "Samad"
