first pass through Song

--- a/localization/english/missions/song_missions_l_english.yml
+++ b/localization/english/missions/song_missions_l_english.yml
@@ -7,56 +7,56 @@
 
  #Missions
 
- song_missions_task_1:0 "Finish the Job"
- song_missions_task_1_DESC:0 ""
+ song_missions_task_1: "Finish the Job"
+ song_missions_task_1_DESC: "The small statelets to our north are an annoyance, worse than flies hanging around a kitchen, but the fall of [GetProvince('(int32)8428').GetName] has proven that all bugs can be squished, regardless of their size or their sting. The time has come for us to finish the job and eliminate these petty lords once and for all.\n\n\n\n\n\n\n\n\n\n@china_mil3!"
 
- song_missions_task_2:0 "Pounce on Chu"
- song_missions_task_2_DESC:0 ""
+ song_missions_task_2: "Pounce On Chu"
+ song_missions_task_2_DESC: "The wickedness and corruption of the House of [GetCountry('CHU').GetRuler.GetFamilyDisplayAdjective], the Kings of [GetCountry('CHU').GetName], is well-known to all of her neighbors, who have long wished to see these tyrants humbled.\n\nThe people, who cry out for justice, will reward [ROOT.GetCountry.GetRuler.GetName] for putting Chu in its proper place - we must teach them a lesson.\n\n\n\n\n\n\n\n\n\n@china_mil5!"
 
- song_missions_task_3:0 "Contested Successions"
- song_missions_task_3_DESC:0 ""
+ song_missions_task_3: "Contested Successions"
+ song_missions_task_3_DESC: "While our preferred method of succession, #Y Agnatic Seniority#!, dates back to the hallowed days of the #T Shang Dynasty#!, there are voices within [ROOT.GetCountry.GetName] that are agitating for change, and for once, [ROOT.GetCountry.GetRuler.GetName] agrees with them; the time has come to change our laws.\n\n\n\n\n\n\n\n\n\n@east_steppemil2!"
 
- song_missions_task_4:0 "Extravagant King"
- song_missions_task_4_DESC:0 ""
+ song_missions_task_4: "Extravagant King"
+ song_missions_task_4_DESC: "While some Kings are loathe to spend funds on anything besides war, [ROOT.GetCountry.GetRuler.GetName] is an enlightened monarch that sees the utility in having artisans and poets at the Royal Court.\n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
- song_missions_task_5:0 "Grave of Confucius"
- song_missions_task_5_DESC:0 ""
+ song_missions_task_5: "Grave of Confucius"
+ song_missions_task_5_DESC: "[GetProvince('(int32)8533').GetName] has two things that it is proud of; it is the birthplace of the sage #E Kong Fuzi#! and is also the location of his grave. Now that we are in possession of this famous city and its notable tomb, the people of [ROOT.GetCountry.GetName] are hailing this achievement.\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
- song_missions_task_6:0 "Opportunistic Alliance"
- song_missions_task_6_DESC:0 ""
+ song_missions_task_6: "Opportunistic Alliance"
+ song_missions_task_6_DESC: "Although we might one day clash on the battlefield with our former friends, there is wisdom in forging alliances of convenience when the opportunities arise. Let us see who is willing to join with us in the carving out of vast kingdoms.\n\n\n\n\n\n\n\n\n\n@china_mil10!"
 
- song_missions_task_7:0 "Reputation of King Zhou"
- song_missions_task_7_DESC:0 ""
+ song_missions_task_7: "Reputation of King Zhou"
+ song_missions_task_7_DESC: "Although it required a near superhuman effort to shed the embarrassing comparisons to the corrupt King Zhou of the Shang, [ROOT.GetCountry.GetRuler.GetName] has managed to convince even [ROOT.GetCountry.GetRuler.GetHerHis] greatest detractors that it is a new day within [ROOT.GetCountry.GetName].\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
- song_missions_task_8:0 "Wedge Wei"
- song_missions_task_8_DESC:0 ""
+ song_missions_task_8: "Wedge Wei"
+ song_missions_task_8_DESC: "Although [GetCountry('WEI').GetName] lies in a precarious position, with claims to territories on both sides of the #E River He#!, the unnatural state of their borders has convinced [ROOT.GetCountry.GetRuler.GetName] to seize vast portions of their holdings.\n\n\n\n\n\n\n\n\n\n@china_mil11!"
 
- song_missions_task_9:0 "Tiddying Up"
- song_missions_task_9_DESC:0 ""
+ song_missions_task_9: "Tidying Up"
+ song_missions_task_9_DESC: "With most of our pressing threats handled at the moment, we can afford to turn our attention towards the tiny kingdoms that hug the coastlines - the time has come to drive them into the sea. \n\n\n\n\n\n\n\n\n\n@china_mil1!"
 
- song_missions_task_10:0 "Repell Qi"
- song_missions_task_10_DESC:0 ""
+ song_missions_task_10: "Repel Qi"
+ song_missions_task_10_DESC: "If we are able to frustrate the efforts of [GetCountry('QII').GetName] to consolidate their southern holdings, then even greater rewards than prestige and honor await [ROOT.GetCountry.GetRuler.GetName], who shall be given authority to wage war against an enemy of [ROOT.GetCountry.GetRuler.GetHerHis] choosing. \n\n\n\n\n\n\n\n\n\n@east_steppemil5!"
 
- song_missions_task_11:0 "A Warring State"
- song_missions_task_11_DESC:0 ""
+ song_missions_task_11: "A Warring State"
+ song_missions_task_11_DESC: "Who could have foreseen that the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] would lead the people of [ROOT.GetCountry.GetName] to this moment? Against all odds, we have triumphed against armies that dwarved our own - truly, [ROOT.GetCountry.GetRuler.GetName] is a divinely-inspired leader! \n\n\n\n\n\n\n\n\n\n\n@tibet_mil9!"
 
- song_missions_task_12:0 "The Word of Mozi"
- song_missions_task_12_DESC:0 ""
+ song_missions_task_12: "The Word of Mozi"
+ song_missions_task_12_DESC: "[ROOT.GetCountry.GetRuler.GetName] has long respected and lived by the precepts of the philosopher #Y Mozi#!, and indeed, if not for the sage, then the people of [ROOT.GetCountry.GetName] would not be as powerful and as strong as they are.\n\nNow that we are in a position to spread the message of Mozi, it has been decreed within [ROOT.GetCountry.GetCapital.GetName] that #E Jian Ai#! be taught throughout the kingdom. \n\n\n\n\n\n\n\n\n\n\n@tibet_mil1!"
 
- song_missions_task_13:0 "Zhuang Zhou"
- song_missions_task_13_DESC:0 ""
+ song_missions_task_13: "Zhuang Zhou"
+ song_missions_task_13_DESC: "[GetCharacter('(int32)594').GetName] is a man of exceptional talents, and [ROOT.GetCountry.GetName] would do well for itself for having the eccentric old minister in charge of its religious advancement studies. \n\n\n\n\n\n\n\n\n\n\n@tibet_mil8!"
 
- song_missions_task_14:0 "Zhuangzi"
- song_missions_task_14_DESC:0 ""
+ song_missions_task_14: "Zhuangzi"
+ song_missions_task_14_DESC: "While some conservative elements have been complaining about [GetCharacter('(int32)594').GetName], who is known to fraternize with Taoists, the brilliant philosopher and scholar continues to excel in his position.\n\nIt is even rumored that the master sage has been slowly compiling his thoughts into a text, one that will share his witticisms with future generations. \n\n\n\n\n\n\n\n\n\n\n@tibet_mil12!"
 
- song_missions_task_15:0 "Food Supply"
- song_missions_task_15_DESC:0 ""
+ song_missions_task_15: "Food Supply"
+ song_missions_task_15_DESC: "We are blessed with vast quantities of arable farmland and magnificent herds of livestock, but we should not rely on the gifts of [ROOT.GetCountry.Custom('get_harvest_goddess')] - the time has come to put in the effort required to guarantee a steady supply of food. \n\n\n\n\n\n\n\n\n\n@celt_mil14!"
 
- song_missions_task_16:0 "Cultivate Markets"
- song_missions_task_16_DESC:0 ""
+ song_missions_task_16: "Cultivate Markets"
+ song_missions_task_16_DESC: "If we want to be wealthy, able to invest in our country and armies, then we must do what we can to ensure that our cities are cultivating trade. Let us build markets throughout the land and increase the trade routes!\n\n\n\n\n\n\n\n\n\n\n@event_pic1!"
 
- song_missions_task_17:0 "Trade Policy"
- song_missions_task_17_DESC:0 ""
+ song_missions_task_17: "Trade Policy"
+ song_missions_task_17_DESC: "Thanks to the efforts of [ROOT.GetCountry.GetRuler.GetName] to steer the economy of [ROOT.GetCountry.GetName], our trade policy continues to fill the royal coffers with silver coins.\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
 
  #Events 
@@ -185,7 +185,7 @@
  desc_trade_policy_song_2: "TODO"
  
  #Tooltips
- song_missions_task_6_claims: "TODO CLAIMS"
+ song_missions_task_6_claims: "We will receive claims on the #Y Daliang#!, #Y Jiyin#!, #Y Huaiyang#!, #Y Donghai#!, #Y Dong#!, #Y Shanyang#!, #Y Taishan#! and #Y Langya#! areas."
  song_missions_task_10_choose_claims: "We will be able to choose between claims on a warring state."
  song_missions_task_16_port_with_commercial_district: "We have at least one port with a commercial district."
  song_missions_task_3_no_pretender_lower_than_60_loyalty: "No Pretender has a loyalty below 60."
@@ -194,3 +194,4 @@
  me_song_ws_10_qii_claims: "We will get claims on all provinces owned by Qi."
  me_song_ws_10_chu_claims: "We will get claims on all provinces owned by Chu."
 
+ price_support_primary_heir_cost_modifier: "Support Primary Heir Cost"
