--- a/localization/english/missions/chinese_empire_missions_l_english.yml
+++ b/localization/english/missions/chinese_empire_missions_l_english.yml
@@ -75,6 +75,9 @@
 
  missions_chinese_empire_task_23:0 "Heaven's Will"
  missions_chinese_empire_task_23_DESC:0 ""
+ 
+ missions_chinese_empire_task_24:0 "Lingqu Canal"
+ missions_chinese_empire_task_24_DESC:0 ""
 
 
 #Events
@@ -208,6 +211,14 @@
  me_chinese_empire_23_desc:0 ""
  me_chinese_empire_23.a:0 ""
  
+ me_chinese_empire_24_title:0 "$missions_chinese_empire_task_24$"
+ me_chinese_empire_24_desc:0 ""
+ me_chinese_empire_24.a:0 ""
+ 
+ me_chinese_empire_2400_title:0 "$missions_chinese_empire_task_24$"
+ me_chinese_empire_2400_desc:0 ""
+ me_chinese_empire_2400.a:0 ""
+ 
  me_chinese_empire_90_title:0 ""
  me_chinese_empire_90_desc:0 ""
  me_chinese_empire_90.a:0 ""
@@ -267,6 +278,7 @@
  sail_china_sail: "Setting Sail"
  pure_land_china: "Purified Land"
  divine_favour_china: "Divine Favor"
+ magic_canal_china: "Magic Canal"
  desc_restored_wall_empire_missions: "TODO MOD"
  desc_civilization_effort_nanzhong: "TODO MOD"
  desc_imperial_road_china: "TODO MOD"
@@ -278,3 +290,4 @@
  desc_sail_china_sail: "TODO MOD"
  desc_pure_land_china: "TODO MOD"
  desc_divine_favour_china: "TODO MOD"
+ desc_magic_canal_china: "TODO MOD"
