Jin and Zhou Formable Adjustments

--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -299,8 +299,8 @@ unification_of_china_mod:0 "Unification of China"
 
 #LOBBY RECOMMENDED COUNTRY INTROS
 joseon_start:0 "#T Joseon#!\nDifficulty: #Y Medium#!\n\nNearly two thousand years ago, the Kingdom of Joseon was established by the semi-mythical leader Dangun, and her people have struggled ever since then to hold on to what they have. In recent years, conflicts with Yan to the west have resulted in Joseon ceding vast tracts of land to her neighbor, and the threat of tribal invasion from the north and east remains present."
-chu_start:0 "#T Chu#!\nDifficulty: #Y Medium#!\n\nAlthough Chu was once a powerful and stable country, the envy of those around her, the last few decades have seen unchecked corruption spreading throughout the government. The people's suffering is compounded by the ineffective and duplicitous leadership that has choked the state, as poor diplomatic decisions have left Chu isolated and paranoid."
-qin_start:0 "#T Qin#!\nDifficulty: #Y Medium#!\n\nAs all of China is consumed by the conflagration of the Warring States Period, the state of Qin is slowly but surely beginning to dominate her neighbors. Strengthened by innovative Legalist Reforms and bolstered by an indomitable martial spirit, Qin stands on the precipice of history."
+chu_start:0 "#T Chu#!\nDifficulty: #Y Hard#!\n\nAlthough Chu was once a powerful and stable country, the envy of those around her, the last few decades have seen unchecked corruption spreading throughout the government. The people's suffering is compounded by the ineffective and duplicitous leadership that has choked the state, as poor diplomatic decisions have left Chu isolated and paranoid."
+qin_start:0 "#T Qin#!\nDifficulty: #Y Easy#!\n\nAs all of China is consumed by the conflagration of the Warring States Period, the state of Qin is slowly but surely beginning to dominate her neighbors. Strengthened by innovative Legalist Reforms and bolstered by an indomitable martial spirit, Qin stands on the precipice of history."
 yamato_start:0 "#T Yamato#!\nDifficulty: #Y Medium#!\n\nFar to the East lies the island of Wa, which is partitioned and divided between the various tribes that live on its shores. Life can be difficult on Wa; the region of Yamato, a small enclave of farmland surrounded by rolling hills, is home to a sturdy and industrious people that are prepared for anything."
 
 thaton_start:0 "#T Thaton#!\nDifficulty: #Y Medium#!\n\nThaton in the Mon tongue of the natives was called as #E Sadhuim#!, which in turn came from the word Sudhammapura, an Indo-Aryan word meaning #E 'Assembly of the Gods.'#! The city-state of Sadhuim was established in at least the 4th century BC and became rich from trade between Sri Lanka. The Kingdom, colloquially called the #E Thaton Kingdom#!, would go on to unite much of the Southern Mons and enter into legend, before being conquered by the #E Kingdom of Pegu#!. In its long legacy from its founding to its ultimate destruction, it left a lasting cultural legacy that remained in the lore of its eventual faith forever."
@@ -308,14 +308,14 @@ qi_start:0 "#T Qi#!\nDifficulty: #Y Medium#!\n\nAt the beginning of the Warring 
 phnom_start:0 "#T Phnom#!\nDifficulty: #Y Medium#!\n\nAt the tip of the Mekong Delta, where the waters of the mighty river empty into the South China Sea, the settled tribes of Phnom make their home. Their homelands are blessed with natural wealth, and foreign merchants often visit their capital city of Vyadhapura for the best prices on these luxury goods."
 
 zhao_start: "#T Zhao#!\nDifficulty: #Y Medium#!\n\n$zhao_heritage_desc$"
-yan_start: "#T Yan#!\nDifficulty: #Y Medium#!\n\n$yan_heritage_desc$"
+yan_start: "#T Yan#!\nDifficulty: #Y Hard#!\n\n$yan_heritage_desc$"
 xiongnu_start: "#T Xiongnu#!\nDifficulty: #Y Medium#!\n\n$xiongnu_heritage_desc$"
 nam_cuong_start: "#T Nam Cuong#!\nDifficulty: #Y Medium#!\n\n$xiou_heritage_desc$"
 sushen_start: "#T Sushen#!\nDifficulty: #Y Medium#!\n\n$sushen_heritage_desc$"
 wei_start: "#T Wei#!\nDifficulty: #Y Medium#!\n\n$wei_heritage_desc$"
 han_start: "#T Han#!\nDifficulty: #Y Medium#!\n\n$han_heritage_desc$"
-song_start: "#T Song#!\nDifficulty: #Y Medium#!\n\n$song_heritage_desc$"
-jingug_start: "#T Jingug#!\nDifficulty: #Y Medium#!\n\n$jingug_heritage_desc$"
+song_start: "#T Song#!\nDifficulty: #Y Hard#!\n\n$song_heritage_desc$"
+jingug_start: "#T Jingug#!\nDifficulty: #Y Easy#!\n\n$jingug_heritage_desc$"
 
 #AOS GOVERNMENTS
 chinese_empire:0 "Chinese Empire"
@@ -1329,3 +1329,11 @@ form_rhaetia_desc:0 "The Rhaetians are a group of Alpine people with whom we sha
 RHAETIA_NAME:0 "Rhaetia"
 RHAETIAN_ADJECTIVE:0 "Rhaetian"
 any_rhaetian_country_tt:0 "@trigger_no! All #Y Rhaetian#! nations are our subjects, or we are the only #Y Rhaetian nation."
+
+ti_nation_formation_events.1.t: "United Jin"
+ti_nation_formation_events.1.desc: "TODO"
+ti_nation_formation_events.1.a: "Let us fully restore Jin."
+ti_nation_formation_events.1.b: "We can stand on our own."
+
+unite_zhou: "Unite Zhou"
+unite_zhou_desc: "TODO"
