--- a/localization/english/acb_countries_l_english.yml
+++ b/localization/english/acb_countries_l_english.yml
@@ -336,8 +336,8 @@
  NOO_ADJ:0 "Noto"
  NUM:1 "Numa"
  NUM_ADJ:0 "Numa"
- NYE:1 "Langyawuyue"
- NYE_ADJ:0 "Langyawuyue"
+ NYE:1 "Langyayue"
+ NYE_ADJ:0 "Langyayue"
  OHK:1 "Ohkita"
  OHK_ADJ:0 "Ohkita"
  OHM:1 "Ohmi"
