--- a/localization/english/missions/han_missions_warring_l_english.yml
+++ b/localization/english/missions/han_missions_warring_l_english.yml
@@ -57,6 +57,9 @@
 
  han_warring_missions_task_17: "Han Dynasty"
  han_warring_missions_task_17_DESC: ""
+ 
+ han_warring_missions_task_18: "Crossbows and Sharp Swords"
+ han_warring_missions_task_18_DESC: "It is said that Han crossbows can shoot 800 meters away and that their swords are also extremely sharp. They can 'cut off cattle and horses on land and geese on water' and 'cut through iron like butter when facing the enemy'."
 
 
  #Events 
@@ -145,6 +148,10 @@
  me_han_warring_17_desc: ""
  me_han_warring_17.a: ""
  
+ me_han_warring_18_title: "$me_han_warring_task_18$"
+ me_han_warring_18_desc: ""
+ me_han_warring_18.a: ""
+ 
  me_han_warring_100_title: ""
  me_han_warring_100_desc: ""
  me_han_warring_100.a: ""
@@ -164,6 +171,7 @@
  han_warring_missions_task_9_claims: "TODO"
  han_warring_missions_task_5_fort_in_hedong_shangdang_area: "We have at least one fort in the Areas of Hedong or Shangdang."
  han_warring_missions_task_11_qin_builds_canal: "We will entice Qin to build the canal."
+ han_warring_missions_task_18_trigger_tt: "We have a legion with at least 10 archers and 10 heavy infantry."
  
  #Treasure
  han_feizi_treasure: "Han Feizi"
@@ -184,4 +192,5 @@
  desc_han_feizi_mod: "TODO"
  coalition_han_bonus: "Coalition led by Han"
  coalition_han_against_qin: "Coalition against Qin"
-
+ han_xbows_swords: "Han Crossbows and Swords"
+ desc_han_xbows_swords: "TODO MOD"
