--- a/localization/english/missions/missions_jingug_l_english.yml
+++ b/localization/english/missions/missions_jingug_l_english.yml
@@ -32,7 +32,7 @@
  missions_jingug_task_8_DESC: "The fame and glory of [ROOT.GetCountry.GetRuler.GetName] will be immortalized if [ROOT.GetCountry.GetRuler.GetSheHe] is able to drive the barbarians out of northern #E Jin#! - the only power on our peninsula must be [ROOT.GetCountry.GetName].\n\n\n\n\n\n\n\n\n\n@east_steppemil1!"
 
  missions_jingug_task_9: "Tribal Center of Jinhan"
- missions_jingug_task_9_DESC: "The province of #E Jinhan#! has been home to \n\n\n\n\n\n\n\n\n\n@east_steppemil3!"
+ missions_jingug_task_9_DESC: "The province of #E Jinhan#! has been home to a distinct culture of lesser tribal kingdoms that have long evaded direct control in our confederacy. Their lands lay inland in the rugged terrain between the eastern and our homeland, with rogue tribal chiefs periodically raiding trade caravans bringing goods from eastern ports to our cpaital. We must directly control these lands to ensure the safety of our caravans and civilize our tribal kinsmen.\n\n\n\n\n\n\n\n\n\n@east_steppemil3!"
 
  missions_jingug_task_10: "Claim the Islands"
  missions_jingug_task_10_DESC: "As we gather more reconnaissance about what lies to our east, [ROOT.GetCountry.GetRuler.GetName] is beginning to prepare our troops for further island invasions.\n\n\n\n\n\n\n\n\n\n@tibet_mil6!"
@@ -132,7 +132,7 @@
  missions_jingug_task_7_any_artist: "We have at least one province with an artist special pop."
  missions_jingug_task_1_claims: "We will receive claims on the #Y Lelang#! and #Y Liaodong#! areas."
  missions_jingug_task_4_claims: "We will receive claims on the #Y Lintun#! and #Y Xuantu#! areas."
- missions_jingug_task_10_claims: "We will receive claims on the #Y Matsura#!, #E Kii#! and #Y Kumaso#! areas."
+ missions_jingug_task_10_claims: "We will receive claims on the #Y Matsura#!, #Y Kii#! and #Y Kumaso#! areas."
  missions_jingug_task_14_claims: "We will receive claims on every province in the #Y Wa#! region."
  is_in_region_wa: "Is in the Region of Wa."
  missions_jingug_task_15_every_wa_province_gets: "Every owned province in the Region of Wa will get:"
